[package]
name = "dnsupdater"
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/s7m0n/dnsupdater"
repository = "https://github.com/s7m0n/dnsupdater/"
license = "GPL-3.0"
readme = "README.md"
keywords = ["dns", "dyndns"]
publish = false


[dependencies]
reqwest = { version = "0.12",  features = ["json"] }
config = "0.10"
ipnetwork = "0.20.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0"
get_if_addrs = "0.5"
chrono = "0.4"
clap = "2"
syslog = "6"
log         = { version = "0.4.8", features = [ "std" ] }
gethostname = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
igd = { version = "0.12", features = ["aio"] }
